[gd_scene load_steps=4 format=3 uid="uid://2eiw04oftrso"]

[ext_resource type="FontFile" uid="uid://b5drm16qrbhna" path="res://Fonts/Xolonium-Regular.ttf" id="1_e0onf"]
[ext_resource type="Script" uid="uid://b4al31taeh34f" path="res://Scripts/hud.gd" id="1_fccik"]
[ext_resource type="PackedScene" uid="uid://bqc6dcfujrdxk" path="res://Scenes/settings.tscn" id="2_bjfho"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_fccik")

[node name="GameOverBackground" type="ColorRect" parent="." groups=["hud_gameover"]]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.637939, 0.121604, 0.148452, 0.756863)

[node name="PauseBackground" type="ColorRect" parent="." groups=["hud_pause"]]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.180392, 0.207843, 0.756863)

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -495.0
offset_bottom = 175.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_e0onf")
theme_override_font_sizes/font_size = 96
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="." groups=["hud_gameover", "hud_pause", "hud_start"]]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 54.0
offset_top = 311.0
offset_right = 1869.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_e0onf")
theme_override_font_sizes/font_size = 128
text = "I Ain't No Rat!"
horizontal_alignment = 1

[node name="DeathMessage" type="Label" parent="." groups=["hud_gameover"]]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 499.0
offset_right = 1923.0
offset_bottom = 311.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_e0onf")
theme_override_font_sizes/font_size = 64
text = "You've succumbed to the rat horde..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="." groups=["hud_gameover", "hud_pause"]]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -454.0
offset_right = 300.0
offset_bottom = -254.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_e0onf")
theme_override_font_sizes/font_size = 128
text = "Restart"

[node name="PauseButton" type="Button" parent="." groups=["hud_pause"]]
visible = false
offset_right = 130.0
offset_bottom = 138.0
theme_override_fonts/font = ExtResource("1_e0onf")
theme_override_font_sizes/font_size = 78
text = "||"
icon_alignment = 1

[node name="StartButton" type="Button" parent="." groups=["hud_start"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -450.0
offset_right = 300.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_e0onf")
theme_override_font_sizes/font_size = 128
text = "Start"

[node name="SettingsButton" type="Button" parent="." groups=["hud_gameover", "hud_pause", "hud_start"]]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -235.0
offset_right = 300.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_e0onf")
theme_override_font_sizes/font_size = 128
text = "Settings"

[node name="DeathVoice" type="AudioStreamPlayer2D" parent="."]
volume_db = 14.362
pitch_scale = 0.8

[node name="SettingsHud" parent="." groups=["hud_settings"] instance=ExtResource("2_bjfho")]
layer = 2
visible = false

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="settings_closed" from="SettingsHud" to="." method="hide_settings"]
